<resources>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="refresh_drag">下拉刷新</string>
    <string name="refresh_release">释放更新</string>
    <string name="refreshing">加载中…</string>
    <string name="refresh_completed">刷新完成</string>

    <string name="load_more">加载更多</string>
    <string name="loading">正在加载…</string>
    <string name="load_completed">加载完成</string>
    <string name="str_not_more">没有更多了</string>
    <string name="str_loading_error">加载失败点击重试…</string>
    <string name="str_restart">重试</string>
    <string name="str_not_network">暂无网络点击重试…</string>

    <string name="lee_load_error">加载失败点击重试</string>
    <string name="lee_load_end">没有更多了</string>
    <string name="lee_load_more">正在加载…</string>
    <string name="str_loading_empty">empty data .</string>

</resources>
