<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_item_loadMore"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tv_more_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/lee_load_more"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginEnd="6dp"
            android:src="@drawable/rotate_progress_bar"
            app:layout_constraintBottom_toBottomOf="@id/tv_more_text"
            app:layout_constraintEnd_toStartOf="@id/tv_more_text"
            app:layout_constraintTop_toTopOf="@id/tv_more_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_item_loadError"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_marginTop="56dp"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tv_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lee_load_error"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_item_loadEnd"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_marginTop="112dp"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tv_end_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lee_load_end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>